<resources>
    <string name="app_name">Zawody Sportowe</string>
    <string name="start">Start</string>
    <string name="loginButton">Zaloguj się</string>
    <string name="login">Podaj login</string>
    <string name="imie">Podaj imię</string>
    <string name="password">Podaj hasło</string>
    <string name="guestButton">Gość</string>
    <string name="refereeButton">Sędzia</string>
    <string name="classificationButton">Wyświetl klasyfikację końcową</string>
    <string name="ladderButton">Wyświetl drabinkę turniejową</string>
    <string name="setMatchButton">Wpisz wynik meczu</string>
    <string name="addPlayerButton">Dodaj nowego zawodnika</string>
    <string name="searchPlayerButton">Sprawdź, czy zawodnik istnieje</string>
    <string name="addPlayerToTournamentButton">Dodaj zawodnika do turnieju</string>
    <string name="sortTableButton">Sortuj tabelę</string>
    <string name="spacePlayersButton">Rozstaw zawodników</string>
    <string name="randomPlayersButton">Losuj zawodników</string>
    <string name="createLadderButton">Stwórz drabinkę turniejową</string>
    <string name="setFirst">Set 1</string>
    <string name="setSecond">Set 2</string>
    <string name="setThird">Set 3</string>
    <string name="setFourth">Set 4</string>
    <string name="setFifth">Set 5</string>
    <string name="nameFirst">Imie 1</string>
    <string name="surnameFirst">Nazwisko 1</string>
    <string name="nameSecond">Imie 2</string>
    <string name="surnameSecond">Nazwisko 2</string>
    <string name="enterMatchButton">Zapisz Mecz</string>
    <string name="addName">Imię</string>
    <string name="addSurname">Nazwisko</string>
    <string name="addDate">Data urodzeni \n DD-MM-RRRR</string>
    <string name="addSex">Płeć</string>
    <string name="addClub">Klub</string>
    <string name="addCategory">Kategoria</string>
    <string name="addPoints">Liczba punktów</string>
    <string name="searchingPlayerButton">Szukaj zawodnika</string>
    <string name="addPlayerToTournamentingPlayerButton">Dodaj zawodnika do turnieju</string>
    <string name="spacingButton">Rozstaw zawodników</string>
    <string name="spacingText">Ilu zawodników rozstawić</string>
    <string name="randomText">Ilu zawodników rozlosować</string>
    <string name="randomButton">Losuj Zawodników</string>
    <string name="sortDate">Data Urodzenia</string>
    <string name="miejsce">Miejsce</string>
    <string name="getPoints">Punkty</string>
    <string name="id">ID</string>
    <string name="sortTableTournamentButton">Sortuj Tabelę Zawodników w Turnieju</string>
    <string name="sortTorunamentPlace">Miejsce</string>
...
