...
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".addPlayerPage">


    <EditText
        android:id="@+id/addNameText"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="17dp"
        android:layout_marginEnd="17dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/addName"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/addSurnameText"
        app:layout_constraintEnd_toStartOf="@+id/addSurnameText"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/addSurnameText"
        android:layout_width="0dp"
...
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="95dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/addPoints"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/addPlayerButton1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addCategory"
        app:layout_constraintTop_toBottomOf="@+id/addClub"
        tools:ignore="MissingConstraints,TextFields" />

    <Button
...
